--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: "3"
 services:
 
   database:
-      image: mysql:5.7
+      image: mariadb
       volumes:
-          - ./docker/database:/var/lib/mysql
+          - ./docker/database:/var/lib/mariadb
       environment:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: mydatabase
