--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 
 ###> symfony/framework-bundle ###
 
-/.env
+.env
 
-/public/bundles/
+public/bundles/
 
-/var/
+var/
 
-/vendor/
+vendor/
 
 ###< symfony/framework-bundle ###
